--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <button class="all-clear">C</button>
                 <button class="back"><i class="fa fa-caret-square-o-left" aria-hidden="true"></i></button>
                 <button class="percentage">%</button>
-                <button class="operator" value="÷">&divide;</button>
+                <button class="operator" value="/">&divide;</button>
             </div>
 
             <div class="row">
